Updated project with the latest version

--- a/index.html
+++ b/index.html
@@ -18,57 +18,31 @@
     <link rel="preload" as="image" href="./src/assets/light1.webp" />
     <link rel="preload" as="image" href="./src/assets/light2.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shoptik - Furniture E-commerce web app</title>
+    <title>Gadgets District</title> <!-- Title changed to Gadgets District -->
     <meta name="theme-color" content="#171717" />
     <!-- Open Graph / Facebook -->
     <meta name="type" property="og:type" content="website" />
-    <meta name="url" property="og:url" content="https://shoptik.netlify.app/" />
-    <meta
-      name="title"
-      property="og:title"
-      content="Shoptik - Handcrafted Furniture for Your Home"
-    />
+    <meta name="url" property="og:url" content="" />
+    <meta name="title" property="og:title" content="Gadgets District" />
     <meta
       name="description"
       property="og:description"
-      content="Find beautifully crafted furniture for your home at Shoptik. Every piece is meticulously designed, adding beauty and functionality to your living spaces."
+      content="All your gadget needs"
     />
-    <meta
-      name="image"
-      property="og:image"
-      content="https://res.cloudinary.com/die12ywpb/image/upload/v1687240262/Yellow_White_Modern_Furniture_Ad_Facebook_Cover_qwvec5.png"
-    />
-    <meta
-      property="og:image:alt"
-      content="Shoptik - Handcrafted Furniture for Your Home"
-    />
+    <meta name="image" property="og:image" content="/favicon.ico" />
+    <meta property="og:image:alt" content="Gadgets District" />
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@themodernmonk7" />
-    <meta name="twitter:creator" content="@themodernmonk7" />
-    <meta name="twitter:url" content="https://shoptik.netlify.app/" />
-    <meta
-      name="twitter:title"
-      content="Shoptik - Handcrafted Furniture for Your Home"
-    />
+    <meta name="twitter:title" content="Gadgets District" />
     <meta
       name="twitter:description"
-      content="Find beautifully crafted furniture for your home at Shoptik. Every piece is meticulously designed, adding beauty and functionality to your living spaces."
+      content="All your gadget needs"
     />
-    <meta
-      name="twitter:image"
-      content="https://res.cloudinary.com/die12ywpb/image/upload/v1687240262/Yellow_White_Modern_Furniture_Ad_Facebook_Cover_qwvec5.png"
-    />
-    <meta
-      name="twitter:image:src"
-      content="https://res.cloudinary.com/die12ywpb/image/upload/v1687240262/Yellow_White_Modern_Furniture_Ad_Facebook_Cover_qwvec5.png"
-    />
+    <meta name="twitter:image" content="/favicon.ico" />
+    <meta name="twitter:image:src" content="/favicon.ico" />
     <meta name="twitter:image:width" content="280" />
     <meta name="twitter:image:height" content="480" />
-    <meta
-      name="twitter:image:alt"
-      content="Shoptik - Handcrafted Furniture for Your Hom"
-    />
+    <meta name="twitter:image:alt" content="Gadgets District" />
+    <meta name="google-site-verification" content="HwiZldLnfA4G81mcQ7SDGOZ252xNKsWRG19A9WTlaow" />
     <!-- Google Tag Manager -->
     <script>
       ;(function (w, d, s, l, i) {
@@ -83,6 +57,25 @@
       })(window, document, "script", "dataLayer", "GTM-PSZB84DZ")
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Meta Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '641884484861857');
+      fbq('track', 'PageView');
+    </script>
+    <noscript>
+      <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=641884484861857&ev=PageView&noscript=1" />
+    </noscript>
+    <!-- End Meta Pixel Code -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -94,7 +87,6 @@
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
-
     <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
